src/objects/Account_Split__c.object
<CustomObject>
    <fields>
        <fullName>Account_Split_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely Identifies an Account Split</description>
        <externalId>true</externalId>
        <label>Account Split ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Account Split IDs</relationshipLabel>
        <relationshipName>Account_Split_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Split_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Account Split IDs</relationshipLabel>
        <relationshipName>Account_Split_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Pct__c</fullName>
        <label>Split Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Account Split ID</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Split Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Split IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>